--- a/assets/css/components/menu-links.css
+++ b/assets/css/components/menu-links.css
@@ -3,10 +3,20 @@
 */
 
 .post-content-body a:not(.button) {
-  background-image: url('data:image/svg+xml;utf8,<svg stroke-width="8" stroke="%23fabe01" fill="none" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg"><line x1="4px" y1="80%" x2="calc(100% - 4px)" y2="80%" /></svg>');
-  background-position: center bottom;
-  background-repeat: no-repeat;
   padding: 0 .125em;
+  background-image: 
+    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><circle cx="50%" cy="50%" r="50%" fill="#fabe01"/></svg>'),
+    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><circle cx="50%" cy="50%" r="50%" fill="#fabe01"/></svg>'),
+    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><rect width="100%" height="100%" fill="#fabe01"/></svg>');
+  background-position:
+    left bottom 0px,
+    right bottom 0px,
+    center bottom 0px;
+  background-size: 
+    .5em .5em,
+    .5em .5em,
+    calc(100% - 0.5em) .5em;
+  background-repeat: no-repeat;
 
   &:hover, 
   &:focus {
@@ -21,7 +31,7 @@
 }
 
 .site-head-left a {
-  
+
   &:hover, 
   &:focus {
     outline: none;
@@ -71,11 +81,17 @@
 
 @keyframes bounceInline {
   from {
-    background-position: center bottom;
+    background-position:
+      left bottom 0px,
+      right bottom 0px,
+      center bottom 0px;
   }
 
   to {
-    background-position: center bottom 4px;
+    background-position:
+      left bottom 4px,
+      right bottom 4px,
+      center bottom 4px;
   }
 }
 
