--- a/assets/css/components/menu-links.css
+++ b/assets/css/components/menu-links.css
@@ -4,19 +4,8 @@
 
 .post-content-body a:not(.button) {
   padding: 0 .125em;
-  background-image: 
-    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><circle cx="50%" cy="50%" r="50%" fill="#fabe01"/></svg>'),
-    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><circle cx="50%" cy="50%" r="50%" fill="#fabe01"/></svg>'),
-    url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><rect width="100%" height="100%" fill="#fabe01"/></svg>');
-  background-position:
-    left bottom 0px,
-    right bottom 0px,
-    center bottom 0px;
-  background-size: 
-    .5em .5em,
-    .5em .5em,
-    calc(100% - 0.5em) .5em;
-  background-repeat: no-repeat;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><rect x="0" y="0" rx=".25em" ry=".25em" width="100%" height="100%" fill="%23fabe01"/></svg>') center bottom 0px no-repeat;
+  background-size: 100% .5em;
 
   &:hover, 
   &:focus {
@@ -31,31 +20,16 @@
 }
 
 .site-head-left a {
+  transition-property: opacity;
 
   &:hover, 
   &:focus {
     outline: none;
     opacity: 1;
-
-    &:after {
-      content: "";
-      position: absolute;
-      top: auto;
-      right: 0.75em;
-      bottom: 12px;
-      left: 0.75em;
-      height: 0.5em;
-      border-radius: 999px;
-      background: var(--color-accent);
-      z-index: -1;
-      animation: bounceMenu .4s cubic-bezier(0,.5,.5,1) infinite alternate;
-
-      @media (max-width: 850px) {
-        left: 0.25em;
-        right: 0.25em;
-        bottom: 0.25em;
-      }
-    }
+    
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><rect x="0" y="0" rx=".25em" ry=".25em" width="100%" height="100%" fill="%23fabe01"/></svg>') center bottom 12px no-repeat;
+    background-size: calc(100% - 1em) .5em;
+    animation: bounceMenu .4s cubic-bezier(0,.5,.5,1) infinite alternate;
   }
 
   &:active {
@@ -71,52 +45,32 @@
 
   &:active:before {
     top: auto;
-    right: -0.33em;
-    bottom: 0.25em;
-    left: -0.33em;
-    height: calc(50% + 0.375em);
+    top: auto;
+    right: -.75em;
+    bottom: 0;
+    left: -.75em;
+    height: calc(.5em + 24px);
     animation: pop .4s linear infinite;
   }
 }
 
 @keyframes bounceInline {
   from {
-    background-position:
-      left bottom 0px,
-      right bottom 0px,
-      center bottom 0px;
+    background-position: center bottom 0px;
   }
 
   to {
-    background-position:
-      left bottom 4px,
-      right bottom 4px,
-      center bottom 4px;
+    background-position: center bottom 4px;
   }
 }
 
 @keyframes bounceMenu {
   from {
-    transform: translateY(0px);
+    background-position: center bottom 12px;
   }
 
   to {
-    transform: translateY(-2px);
-  }
-}
-
-@keyframes pulse {
-  from {
-    bottom: 12px;
-    height: 25%;
-    box-shadow: 0 0 0 0 var(--color-accent), 0 0 0 0 var(--color-accent);
-  }
-
-  to {
-    bottom: 10px;
-    height: 20%;
-    box-shadow: .25em 0 0 0 var(--color-accent), -.25em 0 0 0 var(--color-accent);
-
+    background-position: center bottom 16px;
   }
 }
 
