--- a/assets/css/components/menu-links.css
+++ b/assets/css/components/menu-links.css
@@ -3,10 +3,9 @@
 */
 
 .post-content-body a:not(.button) {
-  background-image: url('data:image/svg+xml;utf8,<svg stroke-width="8" stroke="%23fabe01" fill="none" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg"><line x1="4px" y1="80%" x2="calc(100% - 4px)" y2="80%" /></svg>');
-  background-position: center bottom;
-  background-repeat: no-repeat;
   padding: 0 .125em;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><rect x="0" y="0" rx=".25em" ry=".25em" width="100%" height="100%" fill="%23fabe01"/></svg>') center bottom 0px no-repeat;
+  background-size: 100% .5em;
 
   &:hover, 
   &:focus {
@@ -21,14 +20,15 @@
 }
 
 .site-head-left a {
+  transition-property: opacity;
 
   &:hover, 
   &:focus {
     outline: none;
     opacity: 1;
-    background-image: url('data:image/svg+xml;utf8,<svg stroke-width="8" stroke="%23fabe01" fill="none" stroke-linecap="round" xmlns="http://www.w3.org/2000/svg"><line x1="14px" y1="70%" x2="calc(100% - 14px)" y2="70%" /></svg>');
-    background-position: center bottom 3px;
-    background-repeat: no-repeat;
+    
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg"><rect x="0" y="0" rx=".25em" ry=".25em" width="100%" height="100%" fill="%23fabe01"/></svg>') center bottom 12px no-repeat;
+    background-size: calc(100% - 1em) .5em;
     animation: bounceMenu .4s cubic-bezier(0,.5,.5,1) infinite alternate;
   }
 
@@ -45,17 +45,18 @@
 
   &:active:before {
     top: auto;
-    right: -0.33em;
-    bottom: 0.25em;
-    left: -0.33em;
-    height: calc(50% + 0.375em);
+    top: auto;
+    right: -.75em;
+    bottom: 0;
+    left: -.75em;
+    height: calc(.5em + 24px);
     animation: pop .4s linear infinite;
   }
 }
 
 @keyframes bounceInline {
   from {
-    background-position: center bottom;
+    background-position: center bottom 0px;
   }
 
   to {
@@ -65,26 +66,11 @@
 
 @keyframes bounceMenu {
   from {
-    background-position: center bottom 3px;
+    background-position: center bottom 12px;
   }
 
   to {
-    background-position: center bottom 5px;
-  }
-}
-
-@keyframes pulse {
-  from {
-    bottom: 12px;
-    height: 25%;
-    box-shadow: 0 0 0 0 var(--color-accent), 0 0 0 0 var(--color-accent);
-  }
-
-  to {
-    bottom: 10px;
-    height: 20%;
-    box-shadow: .25em 0 0 0 var(--color-accent), -.25em 0 0 0 var(--color-accent);
-
+    background-position: center bottom 16px;
   }
 }
 
