--- a/assets/css/components/global.css
+++ b/assets/css/components/global.css
@@ -109,6 +109,7 @@ table {
 }
 img {
     max-width: 100%;
+    height: auto;
 }
 html {
     box-sizing: border-box;
@@ -295,7 +296,8 @@ hr {
     padding: 0;
     height: 1px;
     border: 0;
-    border-top: 1px solid color(var(--color-border) l(+10%));
+    border-top: 1px solid color(var(--color-border) l(+5%));
+    overflow: visible;
 }
 
 audio,
