--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -437,7 +437,7 @@ body {
     flex: 1 1 50%;
     display: flex;
     position: relative;
-    height: 35vw;
+    height: calc(94vw / 2 / 16 * 9);
     background: linear-gradient(135deg, #1f1f1f 0%, #111 100%) center center;
     background-size: cover;
     overflow: hidden;
@@ -447,7 +447,7 @@ body {
 @media (max-width: 767px) {
     .post-card {
         flex: 1 1 100%;
-        height: 70vw;
+        height: calc(88vw / 1 / 16 * 9);
     }
 }
 
